# ned

./: .gitignore  .natvis  CMakeLists.txt  CMakeSettings.json  libnn.sln
backends/: CMakeLists.txt
backends/cuda/: CMakeLists.txt
backends/cuda/include/cuned/: cugraph.h  cunodes.h
backends/cuda/source/: cugraph.cpp
backends/cuda/source/nodes/: activations.cu  basic_ops.cu  basic_ops_out.cu  matops.cu
backends/cuda/tests/: main.cpp  test.nn
backends/cuda/type_dispatch_helpers/: CMakeLists.txt  basic_ops.cpp
backends/llvm/: CMakeLists.txt
backends/llvm/include/nedvm/: common.h  graphgen.h  vmnodes.h
backends/llvm/source/: basic_ops.cpp  common.cpp  graphgen.cpp  vmnodes.cpp
backends/llvm/tests/: main.cpp  test.nn
backends/nedptx/: CMakeLists.txt
backends/nedptx/include/nedptx/: graphgen.h  graphops.h
backends/nedptx/source/: graphgen.cpp  graphops.cpp
backends/nvm/: CMakeLists.txt
backends/nvm/extensions/: CMakeLists.txt
backends/nvm/extensions/basic/: CMakeLists.txt
backends/nvm/extensions/basic/include/: basic.h
backends/nvm/extensions/basic/source/: basic.cpp
backends/nvm/include/nvm/: common.h  graphgen.h  nodegen.h  runtime.h
backends/nvm/source/: common.cpp  graphgen.cpp  nodegen.cpp  runtime.cpp
backends/nvm/tests/: .gitignore  main.cpp  nvm.nn  playground.cpp  playground.ll  test.nn
cppned/: CMakeLists.txt  main.cpp
libned/: CMakeLists.txt  sample.bcnn  sample.nn
libned/include/ned/: errors.h
libned/include/ned/core/: config.h  graph.h  reduce.h  setup.h  tensor.h
libned/include/ned/lang/: ast.h  bytecode.h  compiler.h  errors.h  eval.h  interp.h  lexer.h  obj.h  typing.h
libned/include/ned/util/: libs.h
libned/lib/: itertools.nn  mathtools.nn  std.nn  stdblocks.nn  stdinits.nn  stdnodes.nn
libned/slib/: stdfn.nn  stdintr.nn
libned/source/: errors.cpp
libned/source/core/: config.cpp  graph.cpp  reduce.cpp  setup.cpp  tensor.cpp
libned/source/lang/: ast.cpp  bcreader.cpp  bytecode.cpp  compiler.cpp  eval.cpp  interp.cpp  lexer.cpp  obj.cpp
libned/source/util/: libs.cpp
libned/tests/: .gitignore  adding.nn  cargs.bcnn  generic_structs.nn  hello.bcnn  hello.nn  lang.nn  main.cpp  newast.cpp  newast.nn  simple.nn  sum.bcnn  test.bcnn  test.nn
libned/tests/structs/: generic.nn  recursive.nn
libnn/: CMakeLists.txt  eval.cpp  libnn.vcxproj  libnn.vcxproj.filters  sample.nn
libnn-old/include/libnn/core/: param.h  tensor.h
libnn-old/src/ops/: linear.cu
libnn-python/: libnn-python.vcxproj  libnn-python.vcxproj.filters
libnn/include/libnn/core/: graph.h  tensor.h
libnn/include/libnn/frontend/: ast.h  eval.h  generator.h  lexer.h  obj.h  parser.h
libnn/include/libnn/ops/: conv2d.h  linear.h  op.h
libnn/source/: main.cpp
libnn/source/frontend/: ast.cpp  eval.cpp  lexer.cpp  obj.cpp
nntest/: CMakeLists.txt
nntest/src/: main.cpp
pyned/: .gitignore  CMakeLists.txt  setup.py
pyned/examples/hello_world/: hello_world.nn  main.py
pyned/include/pyned/: pyned.h
pyned/include/pyned/core/: edge.h  graph.h  node.h
pyned/include/pyned/lang/: ast.h  astobj.h  generr.h  methods.h  obj.h  syntaxerr.h
pyned/pyned/: __init__.py  core.py  lang.py
pyned/pyned/lang/: __init__.py  errors.py  parse.py
pyned/source/: main.cpp
pyned/source/core/: edge.cpp  graph.cpp  module.cpp  node.cpp
pyned/source/lang/: ast.cpp  generr.cpp  methods.cpp  module.cpp  ned_ast.cpp  obj.cpp  syntaxerr.cpp
pyned/tests/: basic_tests.py  binop_tests.py  ned_tests.py
pyned/tests/nn/: decl_scalar.nn  decl_tensor.nn  main.py
pyned/tests/nn/basic_tests/: decl_unarynode.nn  inp_scalar.nn  inp_tensor.nn  inp_unarynode.nn
pyned/tests/nn/binop_tests/: decl_same.nn  inp_same.nn
